- aes/gemsuper.c: Use #defines to convert from mouse number to mouse
  image for graf_mouse(). (RFB)
- bios/tosvars.h bios/tosvars.S: Mark vblsem as volatile for safety. (VRI)
- bios/bios.c bios/screen.c: Cleaned up bios_init() initialization order. (VRI)
- bios/bios.c: Initialized the BIOS console early to see debug messages. (VRI)
- Makefile release.mk bios/aciavecs.S bios/amiga.c bios/amiga.h bios/amiga2.S
  bios/bios.c bios/ide.c bios/machine.c bios/memory.S bios/screen.c
  bios/startup.S doc/readme-amiga.txt include/config.h tools/mkrom.c: Added
  support for Amiga hardware. (VRI)
- aes/gemfmalt.c: Issue debug msg if lines or buttons in form_alert()
  exceed standard TOS lengths. (RFB)

2012-06-24
- bios/screen.c bios/screen.h vdi/vdi_control.c: Fix bug: vq_extnd(mode 1)
  always returned 0 for LUT support. (RFB)
- aes/geminit.c: Use gem_rsc.h #defines instead of local #defines. (RFB)

2012-06-25
- bios/floppy.c bios/nvram.c: Added debug traces. (VRI)
- vdi/vdi_control.c: Fixed compilation for non-Atari hardware. (VRI)
- bios/ide.c: Changed struct IDE conditional compilation. (VRI)

2012-06-26
- Makefile aes/geminit.c bios/screen.c bios/screen.h bios/videl.c bios/videl.h
  desk/deskmain.c desk/deskrez.c: Rough split of screen.c into videl.c. (VRI)
- tools/erd.c: Fix bug when tree specified by 'tree_start' is not found. (RFB)

2012-06-27
- bios/screen.c: Quick compilation fix for make 192. (VRI)
- aes/gem_rsc.c: Reorganised to correspond to desk_rsc.c layout. (RFB)

2012-06-28
- tools/erd.c: Fix bug in comments in generated .c file. (RFB)
- aes/gem_rsc.c aes/gem_rsc.h: More reorganisation for standard layout. (RFB)

2012-06-29
- aes/gemfmalt.c aes/gem_rsc.c aes/gem_rsc.h: Replace hardcoded numbers
  with #defines for alert msg/button sizes. (RFB)
- aes/gem_rsc.c: Set up ptrs to alert msg/button buffers dynamically. (RFB)
- aes/geminit.c: Code cleanup: use #define for tree number of desktop. (RFB)
- aes/gem_rsc.c: Standardise contents of last object. (RFB)